--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
   			<artifactId>lombok</artifactId>
   			<version>1.18.28</version>
 			</dependency>
+		<dependencies>
+    			<dependency>
+        		<groupId>org.junit.jupiter</groupId>
+        		<artifactId>junit-jupiter-engine</artifactId>
+       			<version>5.5.2</version>
+    		</dependency>
+</dependencies>
 	</dependencies>
 	<build>
 		<plugins>
@@ -81,7 +88,18 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			
+			<plugin>
+            			<groupId>org.apache.maven.plugins</groupId>
+            			<artifactId>maven-surefire-plugin</artifactId>
+            			<version>3.0.0-M5</version>
+            			<dependencies>
+                		<dependency>
+                    		<groupId>org.junit.jupiter</groupId>
+                    		<artifactId>junit-jupiter-engine</artifactId>
+                    		<version>5.5.2</version>
+                		</dependency>
+            			</dependencies>
+        		</plugin>
 		</plugins>
 	</build>
 </project>
